@@ -4,6 +4,8 @@ NSD RELEASE NOTES
 =============
 FEATURES:
 	- New option 'nsid:', to specify the NSID (Bugfix #298).
+	- The default chroot can be set with --with-chroot=<dir>.
+	  If not set, by default chroot will not be used (thanks Jakob Schlyter).
 
 OPERATIONAL NOTES:
 	- NSID support is now enabled by default.
