@@ -649,8 +649,10 @@ main(int argc, char *argv[])
 #endif /* BIND8_STATS */
 #ifdef HAVE_CHROOT
 	if(nsd.chrootdir == 0) nsd.chrootdir = nsd.options->chroot;
-    /* uncomment for NSD 3.3. */
-    /* if(nsd.chrootdir == 0) nsd.chrootdir = strdup(CHROOTDIR); */
+#ifdef CHROOTDIR
+	/* if still no chrootdir, fallback to default */
+        if(nsd.chrootdir == 0) nsd.chrootdir = CHROOTDIR;
+#endif /* CHROOTDIR */
 #endif /* HAVE_CHROOT */
 	if(nsd.username == 0) {
 		if(nsd.options->username) nsd.username = nsd.options->username;
